live measurement returns a full measurement update swaggerdoc
